KAFKA-21106: Address review comments