@@ -24,10 +24,10 @@ import org.apache.kafka.common.TopicPartition;
 
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -67,14 +67,15 @@ public class ShareFetch<K, V> {
      */
     public void add(TopicIdPartition partition, ShareInFlightBatch<K, V> batch) {
         Objects.requireNonNull(batch);
-        batches.computeIfAbsent(partition, k -> new LinkedList<>()).add(batch);
+        batches.computeIfAbsent(partition, k -> new ArrayList<>()).add(batch);
         if (batch.getAcquisitionLockTimeoutMs().isPresent()) {
             acquisitionLockTimeoutMs = batch.getAcquisitionLockTimeoutMs();
         }
     }
 
     /**
-     * @return all the non-control messages for this fetch, grouped by partition
+     * @return all the non-control messages for this fetch, grouped by partition. Partitions with no
+     * in-flight records (such as those whose acquired offsets were all control records) are omitted.
      */
     public Map<TopicPartition, List<ConsumerRecord<K, V>>> records() {
         final LinkedHashMap<TopicPartition, List<ConsumerRecord<K, V>>> result = new LinkedHashMap<>();
@@ -83,9 +84,11 @@ public class ShareFetch<K, V> {
             for (ShareInFlightBatch<K, V> batch : batchList) {
                 records.addAll(batch.getInFlightRecords());
             }
-            result.put(tip.topicPartition(), records);
+            if (!records.isEmpty()) {
+                result.put(tip.topicPartition(), records);
+            }
         });
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     /**
